--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
+    "netlify-cli": "^8.0.5",
     "prettier": "^2.5.0"
   },
   "dependencies": {
